# csvtui

./: CMakeLists.txt  LICENSE  README.md  test.csv
src/: csv_buffer.cpp  csv_buffer.h  csv_controller.cpp  csv_controller.h  csv_model.cpp  csv_model.h  csv_view.cpp  csv_view.h  main.cpp
